# ViduSdk

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.lic  README.md  install.bat  install.sh  set_env.bat  set_env.sh  ubuntu_install_opencv_pipelines.sh  update.txt
SDKbin/: getCameraPara  okulo_viewer  streamShow
SDKcode/GenTL/GenICam/: GenTL.h  PFNC.h  PFNC_Supplement.h
SDKcode/GenTLwrapper/: CMakeLists.txt  cmake.in
SDKcode/GenTLwrapper/basic/inc/: buffer2cvMat.h  camParaDef.h  getCvMatFromBuffer.h
SDKcode/GenTLwrapper/basic/src/: buffer2cvMat.cpp  cvMatConvert.cpp
SDKcode/GenTLwrapper/inc/: PDbuffer.h  PDdevice.h  PDport.h  PDstream.h  sPDstream.h
SDKcode/GenTLwrapper/include/GenTLwrapper/: PDbuffer.h  PDdevice.h  PDport.h  PDstream.h  sPDstream.h
SDKcode/GenTLwrapper/include/GenTLwrapper/basic/: camParaDef.h  getCvMatFromBuffer.h
SDKcode/GenTLwrapper/src/: PDbuffer.cpp  PDdevice.cpp  PDport.cpp  PDstream.cpp  sPDstream.cpp
SDKcode/GenTLwrapper/src/basic/: buffer2cvMat.cpp  camParaDef.cpp  cvMatConvert.cpp
SDKcode/common/: debug.h  scheduleTask.h  stringFormat.cpp  stringFormat.h  timeTest.h  vectorOp.h
SDKlib/: DYVGenTL.cti  DYVGenTL.lib  DYVInterface.xml  OkuloTest.py  getCameraPara  pclConf.xml  streamShow  tofConf.xml
SDKlib/SDKpythonLib/: pyvidu.cp310-win_amd64.pyd  pyvidu.cp311-win_amd64.pyd  pyvidu.cp36-win_amd64.pyd  pyvidu.cp37-win_amd64.pyd  pyvidu.cp38-win_amd64.pyd  pyvidu.cp39-win_amd64.pyd
SDKlib/opencvSO/: libopencv_highgui.so.4.2.0  libopencv_imgcodecs.so.4.2.0
SDKlib/xml/: DYVRemoteDevice.xml  DYVTL.xml  normConf.xml  pclConf.xml  tofConf.xml
SDKlib/xml/ftdi/v0/: DYVRemoteDevice.xml  tofConf.xml
SDKlib/xml/ftdi/v1/: DYVRemoteDevice.xml  normConf.xml  tofConf.xml
SDKpythonLib/: okulo_test.py  pyvidu.cp36-win_amd64.pyd  pyvidu.cp37-win_amd64.pyd  pyvidu.cp38-win_amd64.pyd  pyvidu.cp39-win_amd64.pyd  vidu_test.py
Vidu_SDK_Api/SDKcode/: Vidu_SDK_Api.h
Vidu_SDK_Api/SDKcode/GenTL/GenICam/: GenTL.h
Vidu_SDK_Api/SDKcode/GenTLwrapper/include/GenTLwrapper/: PDbuffer.h  PDdevice.h  PDimage.h  PDport.h  PDstream.h  sPDstream.h
Vidu_SDK_Api/SDKcode/GenTLwrapper/include/GenTLwrapper/basic/: getImageFromBuffer.h
Vidu_SDK_Api/SDKlib/: DYVGenTL.lib  GenTLwrapper.lib
Vidu_SDK_Api/SDKlib/SDKpythonLib/: pyvidu.cp310-win_amd64.pyd  pyvidu.cp311-win_amd64.pyd  pyvidu.cp312-win_amd64.pyd  pyvidu.cp36-win_amd64.pyd  pyvidu.cp37-win_amd64.pyd  pyvidu.cp38-win_amd64.pyd  pyvidu.cp39-win_amd64.pyd
Vidu_SDK_Api/cmake/: Vidu_SDK_Api-release.cmake  Vidu_SDK_Api.cmake  Vidu_SDK_ApiConfig.cmake  Vidu_SDK_ApiConfigVersion.cmake
camdriver/: 53-psf-camera.rules  installDriver.sh  okulo-metadata-bionic-5.patch  okulo-metadata-bionic-Ubuntu-hwe-4.18.0-25.26_18.04.1.patch  okulo-metadata-bionic-hwe-5.4.patch  okulo-metadata-bionic-master.patch  okulo-metadata-focal-master.patch  okulo-metadata-jammy-hwe-6.2.patch  okulo-metadata-jammy-hwe-6.5.patch  okulo-metadata-jammy-master.patch  okulo-metadata-xenial-Ubuntu-hwe-4.13.0-45.50_16.04.1.patch  okulo-metadata-xenial-Ubuntu-hwe-4.8.0-58.63_16.04.1.patch  okulo-metadata-xenial-hwe-zesty.patch  okulo-metadata-xenial-hwe.patch  okulo_c1_metadata_win.ps1  patch-okulo-ubuntu-lts-hwe.sh  patch-utils-hwe.sh  setEnvPath.ps1  set_env_path.ps1
code/GenTL/GenICam/: PFNC.h
code/GenTLwrapper/: CMakeLists.txt
code/GenTLwrapper/basic/inc/: cvMatConvert.h
code/GenTLwrapper/basic/src/: camParaDef.cpp  cvMatConvert.cpp
code/GenTLwrapper/inc/: PDdevice.h  PDport.h
code/GenTLwrapper/src/: PDdevice.cpp  PDstream.cpp  sPDstream.cpp
code/common/: stringFormat.h  timeTest.h
example/: CMakeLists.txt
example/BundleFusion/: .gitignore  README.md  bundle_fusion_okulo.cpp
example/algorithm/: CMakeLists.txt  main.cpp
example/align/: CMakeLists.txt  Readme.md  extrinsics.json  intrinsics.json  main.cpp
example/align/image/: infrared_image.pgm  pha_image.pgm
example/deproject/: CMakeLists.txt  main.cpp
example/getCamPara/: CMakeLists.txt  main.cpp
example/kinfusion/: CMakeLists.txt  README.md  main.cpp
example/multiDevice/: CMakeLists.txt  main.cpp
example/streamShow/: CMakeLists.txt  main.cpp
lib/: DYVDevice.xml  DYVRemoteDevice.xml  descFileUpdate
license/genicam/: LICENSE
license/glfw/: LICENSE
python/: vidu_test.py
ros/: Vidu_ROS2_Wrapper.md  Vidu_ROS_Wrapper.md
ros/vidu_ros2_interfaces/: CMakeLists.txt  package.xml
ros/vidu_ros2_interfaces/msg/: Extrinsics.msg
ros/vidu_ros2_wrapper/: CMakeLists.txt  package.xml
ros/vidu_ros2_wrapper/src/: vidu_ros2_wrapper.cpp
ros/vidu_ros_wrapper/: CMakeLists.txt  package.xml
ros/vidu_ros_wrapper/src/: vidu_ros_wrapper_node.cpp
